// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs linked crumb 1`] = `
<blaze-breadcrumbs
  class="hydrated"
>
  
  
  
  
  
  
  
  
  <nav>
    <ol
      class="c-breadcrumbs"
    >
      
      
      
      <blaze-breadcrumb
        class="hydrated"
        href="home.html"
      >
        
        
        <li
          class="c-breadcrumbs__crumb"
        >
          <a
            class="c-link"
            href="home.html"
          >
            
            Home
          </a>
        </li>
      </blaze-breadcrumb>
      
      
      <blaze-breadcrumb
        class="hydrated"
        href="another-page.html"
      >
        
        
        <li
          class="c-breadcrumbs__crumb"
        >
          <a
            class="c-link"
            href="another-page.html"
          >
            
            Another page
          </a>
        </li>
      </blaze-breadcrumb>
      
      
      <blaze-breadcrumb
        class="hydrated"
      >
        
        
        <li
          aria-current="true"
          class="c-breadcrumbs__crumb"
        >
          
          Sub-section
        </li>
      </blaze-breadcrumb>
      
    
    </ol>
  </nav>
</blaze-breadcrumbs>
`;

exports[`Breadcrumbs nothing is rendered with no crumbs 1`] = `
<blaze-breadcrumbs
  class="hydrated"
>
  
  <nav>
    <ol
      class="c-breadcrumbs"
    >
      
    </ol>
  </nav>
</blaze-breadcrumbs>
`;

exports[`Breadcrumbs one crumb 1`] = `
<blaze-breadcrumbs
  class="hydrated"
>
  
  
  
  
  <nav>
    <ol
      class="c-breadcrumbs"
    >
      
      
      
      <blaze-breadcrumb
        class="hydrated"
      >
        
        
        <li
          aria-current="true"
          class="c-breadcrumbs__crumb"
        >
          
          Home
        </li>
      </blaze-breadcrumb>
      
    
    </ol>
  </nav>
</blaze-breadcrumbs>
`;

exports[`Breadcrumbs two crumbs with a separator 1`] = `
<blaze-breadcrumbs
  class="hydrated"
>
  
  
  
  
  
  
  <nav>
    <ol
      class="c-breadcrumbs"
    >
      
      
      
      <blaze-breadcrumb
        class="hydrated"
      >
        
        
        <li
          class="c-breadcrumbs__crumb"
        >
          
          Home
        </li>
      </blaze-breadcrumb>
      
      
      <blaze-breadcrumb
        class="hydrated"
      >
        
        
        <li
          aria-current="true"
          class="c-breadcrumbs__crumb"
        >
          
          Sub-section
        </li>
      </blaze-breadcrumb>
      
    
    </ol>
  </nav>
</blaze-breadcrumbs>
`;
